--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,13 @@
 # This CMake file is picked by the Zephyr build system because it is defined
 # as the module CMake entry point (see zephyr/module.yml).
 
-zephyr_include_directories(include)
+# This is needed so that custom driver classes using system calls are taken into
+# account
+list(APPEND SYSCALL_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
+set(SYSCALL_INCLUDE_DIRS ${SYSCALL_INCLUDE_DIRS} PARENT_SCOPE)
 
-add_subdirectory(drivers)
+zephyr_include_directories(include)
+zephyr_linker_sources(DATA_SECTIONS include/iterables/iterables_ram.ld)
+
+# add_subdirectory(drivers)
 add_subdirectory(lib)
