--- a/app/prj.conf
+++ b/app/prj.conf
@@ -1,6 +1,33 @@
-# Copyright (c) 2021 Nordic Semiconductor ASA
-# SPDX-License-Identifier: Apache-2.0
-#
-# This file contains selected Kconfig options for the application.
+CONFIG_UART_CONSOLE=n
+CONFIG_USE_SEGGER_RTT=y
+CONFIG_RTT_CONSOLE=y
+
+CONFIG_LOG=y
+CONFIG_PRINTK=y
+
+CONFIG_SERIAL=y
+CONFIG_UART_INTERRUPT_DRIVEN=y
+CONFIG_UART_LINE_CTRL=n
 
 CONFIG_SENSOR=y
+CONFIG_GPIO=y
+CONFIG_PWM=y
+
+CONFIG_MODBUS=y
+CONFIG_MODBUS_ROLE_CLIENT_SERVER=y
+
+CONFIG_MAIN_STACK_SIZE=2048
+CONFIG_REQUIRES_FULL_LIBC=y
+CONFIG_POSIX_API=y
+CONFIG_SNTP=y
+
+CONFIG_MAIN_STACK_SIZE=1024
+CONFIG_SYSTEM_WORKQUEUE_STACK_SIZE=512
+
+CONFIG_THREAD_STACK_INFO=y
+CONFIG_DYNAMIC_THREAD=y
+CONFIG_DEBUG_THREAD_INFO=y
+CONFIG_THREAD_NAME=y
+
+CONFIG_ZBUS=y
+CONFIG_ZBUS_LOG_LEVEL_INF=y
