--- a/west.yml
+++ b/west.yml
@@ -14,6 +14,9 @@ manifest:
         # By using name-allowlist we can clone only the modules that are
         # strictly needed by the application.
         name-allowlist:
+          - mcuboot
           - cmsis      # required by the ARM port
           - hal_nordic # required by the custom_plank board (Nordic based)
           - hal_stm32  # required by the nucleo_f302r8 board (STM32 based)
+          - hal_rpi_pico
+          - hal_espressif
