--- a/bnct-app/prj.conf
+++ b/bnct-app/prj.conf
@@ -2,7 +2,7 @@ CONFIG_UART_CONSOLE=n
 CONFIG_USE_SEGGER_RTT=y
 CONFIG_RTT_CONSOLE=y
 
-CONFIG_LOG=y
+# CONFIG_LOG=y
 CONFIG_PRINTK=y
 
 CONFIG_SERIAL=y
